# overengineered-tic-tac-toe

./: .clang-format  .gitignore  Makefile  README.md  compile_commands.json  pyproject.toml  setup.py
lib/: board.cpp  board.h
src/tic_tac_toe/: _bindings.pyi  main.py
